WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
163802
Slow and big Heap methods should not be inline
https://bugs.webkit.org/show_bug.cgi?id=163802
Summary
Slow and big Heap methods should not be inline
Filip Pizlo
Reported
2016-10-21 10:40:18 PDT
Patch forthcoming.
Attachments
the patch
(10.12 KB, patch)
2016-10-21 10:42 PDT
,
Filip Pizlo
no flags
Details
Formatted Diff
Diff
the patch
(11.42 KB, patch)
2016-10-21 10:47 PDT
,
Filip Pizlo
keith_miller
: review+
Details
Formatted Diff
Diff
patch for landing
(12.05 KB, patch)
2016-10-21 13:40 PDT
,
Filip Pizlo
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Filip Pizlo
Comment 1
2016-10-21 10:42:02 PDT
Created
attachment 292372
[details]
the patch
Filip Pizlo
Comment 2
2016-10-21 10:47:09 PDT
Created
attachment 292374
[details]
the patch
Filip Pizlo
Comment 3
2016-10-21 10:48:23 PDT
Comment on
attachment 292374
[details]
the patch View in context:
https://bugs.webkit.org/attachment.cgi?id=292374&action=review
> Source/JavaScriptCore/heap/HeapInlines.h:-155 > -inline void Heap::reportExtraMemoryAllocated(size_t size) > -{ > - if (size > minExtraMemory) > - reportExtraMemoryAllocatedSlowCase(size); > -} > -
Hmmm, maybe I shouldn't have made this inline. I'll run benchmarks and find out. :-)
Keith Miller
Comment 4
2016-10-21 10:48:51 PDT
Comment on
attachment 292374
[details]
the patch r=me.
Filip Pizlo
Comment 5
2016-10-21 13:40:16 PDT
Created
attachment 292391
[details]
patch for landing
Filip Pizlo
Comment 6
2016-10-22 12:37:53 PDT
Landed in
https://trac.webkit.org/changeset/207714
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug